--- a/docshub/Dockerfile.prod
+++ b/docshub/Dockerfile.prod
@@ -1,18 +1,12 @@
-FROM node:20-alpine AS build
-
+FROM node:20-alpine AS runtime
 WORKDIR /app
 
-COPY package*.json ./
+COPY . .
 
 RUN npm i
-
-COPY . .
-
 RUN npm run build
 
-COPY . .
-
-FROM nginx:alpine AS runtime
-COPY ./nginx/nginx.conf /etc/nginx/nginx.conf
-COPY --from=build /app/dist /usr/share/nginx/html
-EXPOSE 8080
+ENV HOST=0.0.0.0
+ENV PORT=4321
+EXPOSE 4321
+CMD node ./dist/server/entry.mjs
