--- a/docshub/package.json
+++ b/docshub/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@astrojs/check": "0.8.3",
     "@astrojs/mdx": "3.1.3",
+    "@astrojs/node": "8.3.3",
     "@astrojs/react": "3.6.0",
     "@astrojs/tailwind": "5.1.0",
     "@astrojs/vercel": "7.7.2",
