feat: new docker compose config + update README

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-  docshub-watch:
-    container_name: docshub-watch
-    image: <in_coming>:candidate
+  docshub:
+    container_name: docshub
+    image: atmgrupomaggioli/docshub:latest
     ports:
       - "4321:4321"
     restart: unless-stopped
@@ -13,3 +13,18 @@ services:
       VERSION: "0.0.1"
       REPOSITORY_TYPE: "github"
       REPOSITORY_URL: "https://github.com/atmgrupomaggioli/docshub"
+      
+  # docshub-multiplatform:
+  #   container_name: docshub-multiplatform
+  #   image: atmgrupomaggioli/docshub:multiplatform
+  #   ports:
+  #     - "4321:4321"
+  #   restart: unless-stopped
+  #   volumes:
+  #     - ./docs:/app/src/content/docs
+  #     - ./images:/app/public/images
+  #   environment:
+  #     DOCUMENTATION_TITLE: "Example Documentation title"
+  #     VERSION: "0.0.1"
+  #     REPOSITORY_TYPE: "github"
+  #     REPOSITORY_URL: "https://github.com/atmgrupomaggioli/docshub"
