feat: imagen de docker + configuración para docs en volúmenes

--- a/docshub/Dockerfile
+++ b/docshub/Dockerfile
@@ -4,9 +4,9 @@ WORKDIR /app
 COPY . .
 
 RUN npm i
-RUN npm run build
+# RUN npm run build
 
 ENV HOST=0.0.0.0
 ENV PORT=4321
 EXPOSE 4321
-CMD node ./dist/server/entry.mjs
+CMD npm run build && node ./dist/server/entry.mjs
