--- a/docshub/package.json
+++ b/docshub/package.json
@@ -27,14 +27,14 @@
     "@astrojs/tailwind": "5.1.0",
     "@astrojs/vercel": "7.7.2",
     "@radix-ui/react-accordion": "1.2.0",
-    "@radix-ui/react-dialog": "1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "2.1.1",
     "@radix-ui/react-slot": "1.1.0",
     "@supabase/supabase-js": "2.44.2",
     "astro": "4.12.2",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
-    "lucide-react": "0.400.0",
+    "lucide-react": "0.446.0",
     "micromatch": "4.0.7",
     "react": "18.3.1",
     "react-dom": "18.3.1",
