--- a/docshub/package.json
+++ b/docshub/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@atmgrupomaggioli/docshub",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "engines": {
     "node": ">=18",
     "npm": ">=9.0.0"
@@ -27,10 +27,9 @@
     "@astrojs/tailwind": "5.1.0",
     "@astrojs/vercel": "7.7.2",
     "@radix-ui/react-accordion": "1.2.0",
-    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dialog": "1.1.1",
     "@radix-ui/react-dropdown-menu": "2.1.1",
     "@radix-ui/react-slot": "1.1.0",
-    "@supabase/supabase-js": "2.44.2",
     "astro": "4.12.2",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
